Alteração no title da página inicial do site

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Agência Fake</title>
+        <title>Agência Fake - Home Page</title>
         <link rel="stylesheet" href="./css/style.css">
         <link rel="stylesheet" href="./css/responsive.css">
     </head>
@@ -20,7 +20,6 @@
                         <li><a href="#">Serviços</a></li>
                         <button id="fale-conosco-btn"><a href="#">Fale Conosco</a></button>
                     </ul>
-
                 </div>
             </nav>
         </header>
